--- a/News/Base.lproj/Main.storyboard
+++ b/News/Base.lproj/Main.storyboard
@@ -261,9 +261,63 @@
                     <view key="view" contentMode="scaleToFill" id="QlO-7d-lJM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qmh-AO-jSP">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsTableViewCell" id="0j2-Zk-4yC" customClass="SettingsTableViewCell" customModule="News" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0j2-Zk-4yC" id="x6r-vl-jyZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="k7e-hu-8mY">
+                                                    <rect key="frame" x="20" y="11" width="374" height="22"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Source" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y6t-NQ-gQ0">
+                                                            <rect key="frame" x="0.0" y="0.0" width="54" height="22"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EKh-Ba-XAY">
+                                                            <rect key="frame" x="354" y="0.0" width="20" height="22"/>
+                                                            <state key="normal" image="circle" catalog="system"/>
+                                                            <connections>
+                                                                <action selector="actionCheckBox:" destination="owJ-jr-KeQ" eventType="touchUpInside" id="O1x-tz-LWI"/>
+                                                            </connections>
+                                                        </button>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="k7e-hu-8mY" firstAttribute="leading" secondItem="x6r-vl-jyZ" secondAttribute="leading" constant="20" symbolic="YES" id="6XU-9Q-0hM"/>
+                                                <constraint firstItem="k7e-hu-8mY" firstAttribute="centerY" secondItem="x6r-vl-jyZ" secondAttribute="centerY" id="sfx-Oc-gxT"/>
+                                                <constraint firstAttribute="trailing" secondItem="k7e-hu-8mY" secondAttribute="trailing" constant="20" id="zuB-eN-Zuf"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="checkBoxButton" destination="EKh-Ba-XAY" id="NV5-W3-67V"/>
+                                            <outlet property="sourceLabel" destination="y6t-NQ-gQ0" id="uxR-TA-W0J"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="n1N-qS-rr2"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="n1N-qS-rr2" firstAttribute="trailing" secondItem="qmh-AO-jSP" secondAttribute="trailing" id="FGx-8B-XSI"/>
+                            <constraint firstItem="qmh-AO-jSP" firstAttribute="leading" secondItem="n1N-qS-rr2" secondAttribute="leading" id="cYq-wU-UI4"/>
+                            <constraint firstItem="n1N-qS-rr2" firstAttribute="bottom" secondItem="qmh-AO-jSP" secondAttribute="bottom" id="sSs-Wd-EnL"/>
+                            <constraint firstItem="qmh-AO-jSP" firstAttribute="top" secondItem="n1N-qS-rr2" secondAttribute="top" id="vNK-Q0-4Ju"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="qmh-AO-jSP" id="olk-Y1-7Jc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oSZ-ey-LOG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -289,6 +343,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="circle" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
